[package]
name = "rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.*"
rand = "0.8.*"
rand_distr = "0.4.*"
lazy_static = "1.4.*"
petgraph = "0.6.*"
cached = "0.30.*"
clap = { version = "3.1.3", features = ["derive"] }
json = "0.12.*"
tensorflow = "0.18.*"
chess = "3.2.*"
once_cell = "1.9.*"
pleco = "0.5.*"
