[package]
name = "cattus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.*"
rand = "0.8.*"
rand_distr = "0.4.*"
lazy_static = "1.5.*"
petgraph = "0.6.*"
cached = "0.51.*"
clap = { version = "4.5.7", features = ["derive"] }
json = "0.12.*"
ndarray = "0.15.6"
chess = "3.2.*"
once_cell = "1.19.*"
pleco = "0.5.*"
tract-onnx = "0.21.5"
