[package]
name = "cattus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
itertools = "0.13.*"
rand = "0.8.*"
rand_distr = "0.4.*"
lazy_static = "1.5.*"
petgraph = "0.6.*"
cached = "0.53.*"
clap = { version = "4.5.13", features = ["derive"] }
json = "0.12.*"
ndarray = "0.15.6"
chess = "3.2.*"
once_cell = "1.19.*"
pleco = "0.5.*"

# Optional dependencies for model inference
pyo3 = { version = "0.22.0", features = ["auto-initialize"], optional = true }
tract-onnx = { version = "0.21.5", optional = true }
ort_lib = { package = "ort", version = "2.0.0-rc.4", features = [
    "coreml",
], optional = true }

[features]
default = ["ort"]
python = ["pyo3"]
tract = ["tract-onnx"]
ort = ["ort_lib"]
