[package]
name = "cattus"
version = "0.1.0"
edition = "2024"


[dependencies]
log = "0.4"
env_logger = "0.11"
itertools = "0.14"
rand = "0.9"
rand_distr = "0.5"
lazy_static = "1.5.*"
petgraph = "0.8"
clap = { version = "4.5", features = ["derive"] }
json = "0.12.*"
ndarray = "0.16"
chess = "3.2.*"
pleco = "0.5.*"
num-traits = "0.2"

# Optional dependencies for model inference
pyo3 = { version = "0.26.0", features = ["auto-initialize"], optional = true }
tract-onnx = { version = "0.22", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }

[features]
default = ["onnx-tract"]
torch-python = ["pyo3"]
onnx-tract = ["tract-onnx"]
onnx-ort = ["ort"]
