[tool.poetry]
name = "cattus_train"
version = "0.1.0"
description = ""
authors = [
    "Barak Ugav <barakugav@gmail.com>",
    "Yishai Gronich <yishai.gronich@gmail.com>",
]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
chess = "^1.9.3"
PyYAML = "^6.0"
construct = "^2.10.68"
torch = "~2.4.0"
onnx = "^1.16.0"
onnx2torch = "^1.5.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
