[package]
name = "cattus"
version = "0.1.0"
edition = "2024"


[dependencies]
log = "0.4"
env_logger = "0.11"
itertools = "0.14"
rand = "0.9"
rand_distr = "0.5"
lazy_static = "1.5.*"
petgraph = "0.8"
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.16"
chess = "3.2.*"
num-traits = "0.2"
metrics = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Optional dependencies for model inference
pyo3 = { version = "0.26.0", features = ["auto-initialize"], optional = true }
numpy = { version = "0.26.0", default-features = false, optional = true }
tract-onnx = { version = "0.22", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }
# TODO: use executorch 0.7.1 when it is released
executorch = { git = "https://github.com/barakugav/executorch-rs.git", rev = "b5d7bb2d178131cf3891fea47f47f490d80a8cf5", features = [
    "module",
    "tensor-ptr",
], optional = true }
executorch-sys = { git = "https://github.com/barakugav/executorch-rs.git", rev = "b5d7bb2d178131cf3891fea47f47f490d80a8cf5", default-features = false, optional = true }
pleco = { version = "0.5.*", optional = true }

[features]
default = []
torch-python = ["pyo3", "numpy"]
onnx-tract = ["tract-onnx"]
onnx-ort = ["ort"]
executorch = ["dep:executorch", "executorch-sys"]
stockfish = ["pleco"]

[[bin]]
name = "cattus"
path = "src/bin/cattus.rs"
required-features = ["stockfish"]

[[example]]
name = "chess_cli_vs_stockfish"
path = "examples/chess_cli_vs_stockfish.rs"
required-features = ["stockfish"]
