[tool.poetry]
name = "cattus_train"
version = "0.1.0"
description = ""
authors = [
    "Barak Ugav <barakugav@gmail.com>",
    "Yishai Gronich <yishai.gronich@gmail.com>",
]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.3"
chess = "^1.11.2"
PyYAML = "^6.0"
construct = "^2.10.70"
pydantic = "~2.11"
torch = "~2.8.0"
onnx = "^1.19.0"
executorch = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
