[package]
name = "cattus-self-play"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cattus = { path = "../../engine" }
ndarray = "0.16"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
json = "0.12.*"
log = "0.4"


[features]
default = []
torch-python = ["cattus/torch-python"]
onnx-tract = ["cattus/onnx-tract"]
onnx-ort = ["cattus/onnx-ort"]
executorch = ["cattus/executorch"]
